--- a/.gitignore
+++ b/.gitignore
@@ -184,6 +184,8 @@ appmap.log
 ./.env
 .streamlit/*
 OGM.Multi.Agents/.streamlit/*
+OGM.Multi.Agents/.streamlit/
 OGM.Multi.Agents/.env
+OGM.Multi.Agents/.env/*
 .venv-stage/*
 .venv-stage
