--- a/OGM.Multi.Agents/requirements.txt
+++ b/OGM.Multi.Agents/requirements.txt
@@ -1,12 +1,13 @@
-crewai
-crewai_tools
-langchain_community
-python-dotenv
-docx2txt
-pydantic
-fastapi
-crew
-langchain-openai
-openai
-streamlit
-python-dotenv
+crew==0.9.2
+crewai==0.5.0
+crewai-tools==0.36.0
+langchain-community==0.0.20
+langchain-openai==0.0.2.post1
+openai==1.51.0
+python-dotenv==0.21.1
+docx2txt==0.8
+pydantic==2.9.2
+pydantic_core==2.23.4
+pydantic-settings==2.6.1
+fastapi==0.109.2
+streamlit== 1.34.0
