--- a/src/app/requirements.txt
+++ b/src/app/requirements.txt
@@ -1,15 +1,14 @@
 crew
 crewai
 crewai-tools
-langchain-community==0.0.20
-langchain-openai==0.0.2.post1
-langchain_openai==0.0.2.post1
-openai==1.51.0
-python-dotenv==0.21.1
-docx2txt==0.8
-pydantic==2.9.2
-pydantic_core==2.23.4
-pydantic-settings==2.6.1
-fastapi==0.109.2
-streamlit== 1.34.0
+langchain-community
+langchain-openai
+openai
+python-dotenv
+docx2txt
+pydantic
+pydantic_core
+pydantic-settings
+fastapi
+streamlit
 
